# finsight-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_CONSOLIDATION.md  LICENSE.spdx  NOTICE  README.md  api.py  app.py  demo.py  examples.py  prepare_transcript.py  pyproject.toml  requirements.txt  run_streamlit.sh  run_test.sh  test_api.py  test_setup.py
.streamlit/: config.toml
data/input/: Alphabet_2025_Q1_Earnings_Call_complete_transcript.txt  GOOG_2025_Q3_Earnings_Transcript.txt
src/: __init__.py  config.py  main.py  models.py  orchestrator.py  tools.py
src/agents/: __init__.py  base.py  coordinator.py  events.py  sentiment.py  volatility.py
